--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,13 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
+
+  --primary-text-color: #181820;
+  --secondary-text-color: #5c5c62;
+  --durability-text-color: #6a737d9c;
+  --icon-color: #6a737d;
+  --border-color: #ff9a0045;
+  --text-decoration-color: #ff9a00;
 }
 
 .container {
